Simplified and cleaned theme.

--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --back: light-dark(#fff, #111);
     --fore: light-dark(#333, #eee);
     --grey: light-dark(#888, #999);
@@ -140,4 +140,4 @@ code {
     color: var(--grey);
     text-align: center;
     margin-top: auto;
-}
+} */
