--- a/themes/wattleworks/layouts/404.html
+++ b/themes/wattleworks/layouts/404.html
@@ -3,12 +3,12 @@
 {{ end }}
 
 {{ define "main" }}
-    <article class="post">
-        <hgroup class="post-header">
-            <h2 class="post-header-title"> 404: Page Not Found </h2>
+    <article>
+        <hgroup>
+            <h2> 404: Page Not Found </h2>
         </hgroup>
 
-        <div class="post-body">
+        <div>
             <p> This page does not exist. </p>
         </div>
     </article>
