--- a/themes/wattleworks/layouts/_default/baseof.html
+++ b/themes/wattleworks/layouts/_default/baseof.html
@@ -2,9 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>
-            {{ site.Title }} · {{ block "name" . }} {{ end }}
-        </title>
+        <title>{{ site.Title }} · {{ block "name" . }} {{ end }}</title>
         <link rel="canonical" href="{{ .Permalink }}">
         <meta name="color-scheme" content="light dark">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,28 +20,19 @@
             <link rel="alternate" type="application/rss+xml" href="{{ .Permalink }}" title="RSS Feed">
         {{ end }}
 
-        <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-        <link rel="shortcut icon" href="/favicon.ico">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <meta name="apple-mobile-web-app-title" content="wattleworks.org">
-
         <meta property="og:site_name" content="{{ site.Title }}">
         <meta property="og:title" content="{{ .Title }}">
         <meta property="og:type" content="article">
         <meta property="og:url" content="{{ .Permalink }}">
-
-        {{ site.Params.analytics | safeHTML }}
     </head>
 
-    <body id="site">
-        <header id="site-header">
-            <h1 id="site-header-title">
+    <body>
+        <header>
+            <h1>
                 <a href="/">{{ site.Title }}</a>
             </h1>
 
-            <nav id="site-header-navigation">
+            <nav>
                 <ul>
                     {{ range site.Params.navigation }}
                         <li>
@@ -54,11 +43,11 @@
             </nav>
         </header>
 
-        <main id="site-body">
+        <main>
             {{ block "main" . }} {{ end }}
         </main>
 
-        <footer id="site-footer">
+        <footer>
             <p> {{ site.Params.footer | markdownify }} </p>
         </footer>
     </body>
