--- a/themes/wattleworks/layouts/_default/list.html
+++ b/themes/wattleworks/layouts/_default/list.html
@@ -7,9 +7,9 @@
 {{ end }}
 
 {{ define "main" }}
-    <article class="post">
-        <hgroup class="post-header">
-            <h2 class="post-header-title">
+    <article>
+        <hgroup>
+            <h2>
                 {{ if eq .Type "tags" }}
                     {{ .Data.Singular | title }}:
                     <a href="{{ .RelPermalink }}">{{ .Title }}</a>
@@ -19,20 +19,18 @@
             </h2>
         </hgroup>
 
-        <div class="post-body">
-            <div class="post-body-list">
-                {{ range .Pages.GroupByDate "January 2006" }}
-                    <h3> {{ .Key }} </h3>
-                    <ul>
-                        {{ range .Pages }}
-                            <li>
-                                <a class="post-body-list-link" href="{{ .RelPermalink }}">{{ .Title }}</a>
-                                <span class="post-body-list-date"> {{ .Date.Format "2 January 2006" }} </span>
-                            </li>
-                        {{ end }}
-                    </ul>
-                </div>
-            {{ end }}
-        </div>
+        {{ range .Pages.GroupByDate "January 2006" }}
+            <div>
+                <h3> {{ .Key }} </h3>
+                <ul>
+                    {{ range .Pages }}
+                        <li>
+                            <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                            <span> {{ .Date.Format "2 January 2006" }} </span>
+                        </li>
+                    {{ end }}
+                </ul>
+            </div>
+        {{ end }}
     </article>
 {{ end }}
