--- a/themes/wattleworks/assets/scss/media.scss
+++ b/themes/wattleworks/assets/scss/media.scss
@@ -1,14 +1,5 @@
 @media only screen and (max-width: 600px) {
-    #site-header #site-header-title {
-        font-size: 1rem;
-    }
-
-    #site-body .post {
-        box-shadow: none;
-        border-left: none;
-        border-right: none;
-        max-width: 100%;
-    }
 }
 
-/* @media only screen and (min-width: 601px) {} */
+@media only screen and (min-width: 601px) {
+}
