--- a/themes/wattleworks/layouts/_default/single.html
+++ b/themes/wattleworks/layouts/_default/single.html
@@ -3,7 +3,7 @@
 {{ end }}
 
 {{ define "main" }}
-    <article class="post">
+    <article>
         {{ partial "post-header.html" . }}
         {{ partial "post-body.html"   . }}
         {{ partial "post-footer.html" . }}
