--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -1,143 +1,88 @@
-/* :root {
-    --back: light-dark(#fff, #111);
-    --fore: light-dark(#333, #eee);
-    --grey: light-dark(#888, #999);
-    --blue: light-dark(#05a, #6be);
-    --purple: light-dark(#50a, #b6e);
-    --silver: light-dark(#ccc, #555);
-    --border: 0.1rem solid var(--silver);
-    --shadow: 0.1rem 0.1rem 0 var(--silver);
-}
-
-@mixin a($normal, $visited) {
-    a:link {
-        color: $normal;
-    }
-
-    a:visited {
-        color: $visited;
-    }
-}
-
-* {
-    box-sizing: border-box;
+:root {
+    --main-back: light-dark(#fff, #222);
+    --main-text: light-dark(#333, #eee);
+    --line-bord: light-dark(#ccc, #444);
+    --text-grey: light-dark(#888, #888);
+    --link-blue: light-dark(#05a, #05a);
+    --link-purp: light-dark(#74a, #74a);
 }
 
 html,
 pre,
 code {
-    font-family: Lexend, system-ui, sans-serif;
-    font-size: 16px;
+    font-family:
+        "Iowan Old Style", "Palatino Linotype", "URW Palladio L", P052, serif;
+    font-size: 18px;
+    font-weight: normal;
     line-height: 1.6em;
 }
 
-#site {
-    @include a(var(--blue), var(--purple));
-    background-color: var(--back);
-    color: var(--fore);
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+body {
+    background-color: var(--main-back);
+    color: var(--main-text);
+    margin: 1rem auto;
+    max-width: 60ch;
+    padding: 0 1rem;
+
+    a {
+        &:link {
+            color: var(--link-blue);
+        }
+
+        &:visited {
+            color: var(--link-purp);
+        }
+    }
 
     ol,
     ul {
+        line-height: 1.8rem;
         padding-inline-start: 1rem;
     }
 }
 
-#site-header {
-    align-items: center;
-    background-color: var(--back);
-    border-bottom: var(--border);
-    column-gap: 1rem;
-    display: flex;
-    justify-content: center;
-    margin: 0;
+header {
+    text-align: center;
 
-    #site-header-title {
-        font-size: 1.25rem;
-
-        a {
-            text-decoration: none;
-        }
-    }
-
-    #site-header-navigation ul {
-        display: flex;
+    nav ul {
         column-gap: 1rem;
+        display: flex;
+        justify-content: center;
         list-style-type: none;
         padding-left: 0;
     }
 }
 
-#site-body {
-    .post {
-        background-color: var(--back);
-        border: var(--border);
-        box-shadow: var(--shadow);
-        margin: 2rem auto;
-        max-width: 60ch;
-        padding: 1rem 2rem;
+article {
+    text-align: justify;
 
-        .post-header {
-            .post-header-title {
-                margin: 0.5rem 0;
-            }
-
-            .post-header-metadata {
-                @include a(var(--grey), var(--grey));
-                color: var(--grey);
-            }
-        }
-
-        .post-body {
-            text-align: justify;
-
-            .post-body-list {
-                line-height: 1.8rem;
-
-                .post-body-list-date {
-                    color: var(--grey);
-                    float: right;
-                }
-            }
-
-            pre {
-                border-left: var(--border);
-                line-height: 1.8rem;
-                padding: 0.5rem 1rem;
-            }
-        }
-
-        .post-footer {
-            .post-footer-navigation {
-                color: var(--grey);
-            }
-        }
+    hgroup p {
+        color: var(--text-grey);
     }
 
-    .pagination ul {
-        column-gap: 1rem;
-        display: flex;
-        justify-content: center;
-        list-style-type: none;
-        margin: 2rem auto;
+    pre {
+        border-left: 0.125rem solid var(--line-bord);
+        padding: 1rem;
+    }
 
-        .page-item {
-            background-color: var(--back);
-            border: var(--border);
-            box-shadow: var(--shadow);
-            padding: 0.5rem 1rem;
-        }
+    ul span {
+        color: var(--text-grey);
     }
 }
 
-#site-footer {
-    @include a(var(--grey), var(--grey));
-    background-color: var(--back);
-    border-top: var(--border);
-    color: var(--grey);
+footer {
+    color: var(--text-grey);
     text-align: center;
-    margin-top: auto;
+}
+
+/* .pagination ul {
+    column-gap: 1rem;
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 2rem auto;
+
+    .page-item {
+        padding: 0.5rem 1rem;
+    }
 } */
