--- a/themes/wattleworks/assets/scss/media.scss
+++ b/themes/wattleworks/assets/scss/media.scss
@@ -1,5 +1,5 @@
 @media only screen and (max-width: 600px) {
-}
-
-@media only screen and (min-width: 601px) {
+    html {
+        font-size: 16px;
+    }
 }
