--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -10,8 +10,7 @@
 html,
 pre,
 code {
-    font-family:
-        "Iowan Old Style", "Palatino Linotype", "URW Palladio L", P052, serif;
+    font-family: Figtree, sans-serif;
     font-size: 18px;
     font-weight: normal;
     line-height: 1.6em;
@@ -21,7 +20,7 @@ body {
     background-color: var(--main-back);
     color: var(--main-text);
     margin: 1rem auto;
-    max-width: 60ch;
+    max-width: 600px;
     padding: 0 1rem;
 
     a {
@@ -43,6 +42,10 @@ body {
 
 header {
     text-align: center;
+
+    h1 {
+        font-weight: 900;
+    }
 
     nav ul {
         column-gap: 1rem;
