--- a/themes/wattleworks/layouts/partials/post-header.html
+++ b/themes/wattleworks/layouts/partials/post-header.html
@@ -5,7 +5,7 @@
 
     {{ if eq .Type "posts" }}
         <p>
-            <span> {{ .Date.Format "Monday 2 January 2006" }}. </span>
+            <span> {{ .Date.Format "Monday 2 January 2006" }} </span>
             <span>
                 {{ range .Params.tags }}
                     <a href="/tags/{{ . | urlize }}">#{{ . | urlize }}</a>
