--- a/themes/wattleworks/assets/scss/media.scss
+++ b/themes/wattleworks/assets/scss/media.scss
@@ -2,12 +2,10 @@
     .desktop {
         display: none;
     }
+}
 
-    article hgroup p span + span {
-        display: block;
-
-        &::before {
-            content: "";
-        }
+@media only screen and (min-width: 501px) {
+    .mobile {
+        display: none;
     }
 }
