Added menu button styling, mobile/desktop list dates.

--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -6,7 +6,7 @@
     --link-deco-norm: #bcd;
     --link-deco-vstd: #cbd;
 
-    --tone-back: #fdf9f5;
+    --tone-back: #fdf8f4;
     --tone-fore: #877;
     --tone-line: #cba;
 }
@@ -54,6 +54,7 @@ body {
 }
 
 header {
+    border-bottom: 0.125rem solid var(--tone-line);
     text-align: center;
 
     h1 {
@@ -62,17 +63,23 @@ header {
     }
 
     nav ul {
-        column-gap: 1rem;
+        column-gap: 0.5rem;
         display: flex;
         justify-content: center;
         list-style-type: none;
         padding-left: 0;
+
+        a:link,
+        a:visited {
+            background-color: var(--tone-back);
+            border-radius: 0.25rem;
+            padding: 0.125rem 0.25rem;
+        }
     }
 }
 
 article {
     border-bottom: 0.125rem solid var(--tone-line);
-    border-top: 0.125rem solid var(--tone-line);
     text-align: justify;
 
     hgroup {
