--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -28,6 +28,7 @@ body {
     padding: 0 1rem;
 
     a {
+        color: var(--link-text);
         text-decoration: underline;
         text-underline-offset: 0.125rem;
 
@@ -71,9 +72,9 @@ header {
 
         a:link,
         a:visited {
+            display: inline-block;
             background-color: var(--tone-back);
-            border-radius: 0.25rem;
-            padding: 0.125rem 0.25rem;
+            padding: 0 0.25rem;
         }
     }
 }
