--- a/themes/wattleworks/layouts/partials/post-footer.html
+++ b/themes/wattleworks/layouts/partials/post-footer.html
@@ -2,13 +2,15 @@
     <ul>
         {{ with .PrevInSection }}
             <li>
-                Previous: <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                <span>Previous:</span>
+                <a href="{{ .RelPermalink }}">{{ .Title }}</a>
             </li>
         {{ end }}
 
         {{ with .NextInSection }}
             <li>
-                Next: <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                <span>Next:</span>
+                <a href="{{ .RelPermalink }}">{{ .Title }}</a>
             </li>
         {{ end }}
     </ul>
