--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -55,7 +55,6 @@ body {
 }
 
 header {
-    border-bottom: 0.125rem solid var(--tone-line);
     text-align: center;
 
     h1 {
@@ -63,24 +62,37 @@ header {
         margin: 0;
     }
 
-    nav ul {
-        column-gap: 0.5rem;
-        display: flex;
-        justify-content: center;
-        list-style-type: none;
-        padding-left: 0;
-
-        a:link,
-        a:visited {
-            display: inline-block;
+    nav {
+        ul {
             background-color: var(--tone-back);
-            padding: 0 0.25rem;
+            border-left: 0.25rem solid var(--tone-line);
+            border-right: 0.25rem solid var(--tone-line);
+            list-style-type: none;
+            padding-left: 0;
+
+            li {
+                display: inline;
+            }
+
+            a {
+                padding: 0 0.25rem;
+
+                &:link,
+                &:visited {
+                    /* text-decoration: none; */
+                    display: inline-block;
+                }
+
+                &:hover {
+                    background: var(--tone-line);
+                    color: var(--tone-back);
+                }
+            }
         }
     }
 }
 
 article {
-    border-bottom: 0.125rem solid var(--tone-line);
     text-align: justify;
 
     hgroup {
@@ -96,6 +108,7 @@ article {
     pre {
         background-color: var(--tone-back);
         border-left: 0.25rem solid var(--tone-line);
+        border-right: 0.25rem solid var(--tone-line);
         line-height: 1.8rem;
         padding: 1rem;
     }
