--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -1,14 +1,15 @@
 :root {
-    --main-back: #fff;
-    --main-fore: #333;
+    --main-back: light-dark(#fff, #111);
+    --main-fore: light-dark(#333, #eee);
 
-    --link-text: #544;
-    --link-deco-norm: #bcd;
-    --link-deco-vstd: #cbd;
+    --link-text: light-dark(#544, #cbb);
+    --link-deco-norm: light-dark(#bcd, #567);
+    --link-deco-vstd: light-dark(#cbd, #657);
 
-    --tone-back: #fdf8f4;
-    --tone-fore: #877;
-    --tone-line: #cba;
+    --tone-back: light-dark(#fdf8f4, #2a2420);
+    --tone-fore: light-dark(#877, #baa);
+    --tone-line: light-dark(#cba, #655);
+    --menu-flip: light-dark(var(--main-back), var(--main-fore));
 }
 
 html,
@@ -85,7 +86,7 @@ header {
 
                 &:hover {
                     background: var(--tone-line);
-                    color: var(--tone-back);
+                    color: var(--menu-flip);
                 }
             }
         }
@@ -94,6 +95,13 @@ header {
 
 article {
     text-align: justify;
+
+    /* + article::before {
+        content: "• • •";
+        display: block;
+        text-align: center;
+        color: var(--tone-line);
+    } */
 
     hgroup {
         p {
