--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -65,27 +65,33 @@ header {
 
     nav {
         ul {
-            background-color: var(--tone-back);
-            border-left: 0.25rem solid var(--tone-line);
-            border-right: 0.25rem solid var(--tone-line);
             list-style-type: none;
-            column-gap: 1rem;
+            column-gap: 0.25rem;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             padding-left: 0;
 
             li {
-                display: inline;
-            }
+                background-color: var(--tone-back);
+                flex: 1;
 
-            a {
-                display: inline-block;
-                padding: 0.25rem;
+                &:first-child {
+                    border-left: 0.25rem solid var(--tone-line);
+                }
+
+                &:last-child {
+                    border-right: 0.25rem solid var(--tone-line);
+                }
 
                 &:hover {
                     background: var(--tone-line);
                     color: var(--menu-flip);
                 }
+            }
+
+            a {
+                display: block;
+                padding: 0.125rem 0;
             }
         }
     }
@@ -120,7 +126,8 @@ article {
     }
 
     ul {
-        a + span {
+        a + span,
+        a + span + span {
             float: right;
         }
 
