Fixed post navigation styling.

--- a/themes/wattleworks/layouts/partials/post-footer.html
+++ b/themes/wattleworks/layouts/partials/post-footer.html
@@ -2,14 +2,14 @@
     <ul>
         {{ with .PrevInSection }}
             <li>
-                <span>Previous:</span>
+                Previous:
                 <a href="{{ .RelPermalink }}">{{ .Title }}</a>
             </li>
         {{ end }}
 
         {{ with .NextInSection }}
             <li>
-                <span>Next:</span>
+                Next:
                 <a href="{{ .RelPermalink }}">{{ .Title }}</a>
             </li>
         {{ end }}
