--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -69,24 +69,28 @@ header {
 
         a {
             display: block;
+            text-decoration: none;
         }
 
         li {
             background-color: var(--tone-back);
+            border: 0.125rem solid var(--tone-line);
             flex: 1;
 
             &:first-child {
-                border-left: 0.25rem solid var(--tone-line);
+                border-top-left-radius: 0.5rem;
+                border-bottom-left-radius: 0.5rem;
             }
 
             &:last-child {
-                border-right: 0.25rem solid var(--tone-line);
+                border-top-right-radius: 0.5rem;
+                border-bottom-right-radius: 0.5rem;
             }
         }
     }
 }
 
-article {
+main {
     text-align: justify;
 
     hgroup {
@@ -97,10 +101,16 @@ article {
         }
     }
 
+    hr {
+        border: 0.0625rem solid var(--tone-line);
+        margin: 3rem auto;
+        width: 20%;
+    }
+
     pre {
         background-color: var(--tone-back);
-        border-left: 0.25rem solid var(--tone-line);
-        border-right: 0.25rem solid var(--tone-line);
+        border: 0.125rem solid var(--tone-line);
+        border-radius: 0.5rem;
         line-height: 1.8rem;
         padding: 1rem;
     }
