--- a/themes/wattleworks/layouts/_default/baseof.html
+++ b/themes/wattleworks/layouts/_default/baseof.html
@@ -34,9 +34,14 @@
 
             <nav>
                 <ul>
+                    {{ $here := .RelPermalink }}
                     {{ range site.Params.navigation }}
                         <li>
-                            <a href="{{ index . 1 }}">{{ index . 0 }}</a>
+                            {{ if eq $here (index . 1) }}
+                                <a class="here" href="{{ index . 1 }}">{{ index . 0 }}</a>
+                            {{ else }}
+                                <a href="{{ index . 1 }}">{{ index . 0 }}</a>
+                            {{ end }}
                         </li>
                     {{ end }}
                 </ul>
