Added print query, CSS preload; fixed semantic HTML.

--- a/themes/wattleworks/layouts/partials/post-footer.html
+++ b/themes/wattleworks/layouts/partials/post-footer.html
@@ -1,4 +1,4 @@
-<div>
+<nav>
     <ul>
         {{ with .PrevInSection }}
             <li>
@@ -14,4 +14,4 @@
             </li>
         {{ end }}
     </ul>
-</div>
+</nav>
