--- a/themes/wattleworks/assets/scss/media.scss
+++ b/themes/wattleworks/assets/scss/media.scss
@@ -1,10 +1,23 @@
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .desktop {
         display: none;
     }
 }
 
-@media only screen and (min-width: 601px) {
+@media screen and (min-width: 601px) {
+    .mobile {
+        display: none;
+    }
+}
+
+@media print {
+    * {
+        background-color: transparent !important;
+        border-color: #ccc !important;
+        color: #000 !important;
+        text-decoration-color: #ccc !important;
+    }
+
     .mobile {
         display: none;
     }
