--- a/themes/wattleworks/layouts/_default/baseof.html
+++ b/themes/wattleworks/layouts/_default/baseof.html
@@ -13,6 +13,7 @@
         {{ end }}
 
         {{ with resources.Match "scss/*.scss" | resources.Concat "style.css" | toCSS | minify | fingerprint }}
+            <link rel="preload" href="{{ .RelPermalink }}" as="style">
             <link rel="stylesheet" href="{{ .RelPermalink }}">
         {{ end }}
 
