--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -12,7 +12,7 @@
     --tone-flip: light-dark(var(--tone-fore), var(--tone-line));
 
     --border-radius: 0.5rem;
-    --border-width: 0.125rem;
+    --border-width: 0.1rem;
 }
 
 html,
@@ -99,7 +99,10 @@ header {
 }
 
 main {
-    text-align: justify;
+    article {
+        text-align: justify;
+        margin-bottom: 2rem;
+    }
 
     hgroup {
         color: var(--tone-fore);
@@ -107,13 +110,6 @@ main {
         span:last-child::before {
             content: " · ";
         }
-    }
-
-    hr {
-        border: calc(var(--border-width) / 2) solid var(--tone-line);
-        border-radius: var(--border-radius);
-        margin: 3rem auto;
-        width: 20%;
     }
 
     pre {
