Changed footer to use author info.

--- a/themes/wattleworks/layouts/_default/baseof.html
+++ b/themes/wattleworks/layouts/_default/baseof.html
@@ -54,7 +54,10 @@
         </main>
 
         <footer>
-            <p> {{ site.Params.footer | markdownify }} </p>
+            <p>
+                &copy; {{ site.Params.author.name }} {{ now.Year }}.
+                Powered by <a href="https://gohugo.io">Hugo</a>.
+            </p>
         </footer>
     </body>
 </html>
