Restored custom font.

--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -18,8 +18,7 @@
 html,
 pre,
 code {
-    font-family:
-        Avenir, Montserrat, Corbel, "URW Gothic", source-sans-pro, sans-serif;
+    font-family: Figtree, sans-serif;
     font-size: 18px;
     font-weight: normal;
     line-height: 1.6em;
@@ -61,7 +60,7 @@ header {
     text-align: center;
 
     h1 {
-        /* font-weight: 900; */
+        font-weight: 900;
         margin: 0;
     }
 
