Changed menu hover style.

--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -77,7 +77,7 @@ header {
             text-decoration: none;
 
             &:hover {
-                color: var(--main-fore);
+                text-decoration: underline;
             }
 
             &.here {
