Removed current menu item highlighting.

--- a/themes/wattleworks/layouts/_default/baseof.html
+++ b/themes/wattleworks/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
             {{ .Publish }}
         {{ end }}
 
-        {{ with resources.Match "scss/*.scss" | resources.Concat "style.css" | toCSS | minify | fingerprint }}
+        {{ with resources.Match "scss/*" | resources.Concat "style.css" | toCSS | fingerprint }}
             <link rel="preload" href="{{ .RelPermalink }}" as="style">
             <link rel="stylesheet" href="{{ .RelPermalink }}">
         {{ end }}
@@ -35,14 +35,9 @@
 
             <nav>
                 <ul>
-                    {{ $here := .RelPermalink }}
                     {{ range site.Params.navigation }}
                         <li>
-                            {{ if eq $here (index . 1) }}
-                                <a class="here" href="{{ index . 1 }}">{{ index . 0 }}</a>
-                            {{ else }}
-                                <a href="{{ index . 1 }}">{{ index . 0 }}</a>
-                            {{ end }}
+                            <a href="{{ index . 1 }}">{{ index . 0 }}</a>
                         </li>
                     {{ end }}
                 </ul>
