--- a/themes/wattleworks/assets/css/tones.css
+++ b/themes/wattleworks/assets/css/tones.css
@@ -1,14 +1,14 @@
 :root {
-    --tone-black: light-dark(#aaa, #555);
-    --tone-blue: light-dark(#ace, #579);
-    --tone-brown: light-dark(#ca9, #752);
-    --tone-green: light-dark(#aca, #597);
-    --tone-orange: light-dark(#eca, #975);
-    --tone-pink: light-dark(#eac, #975);
-    --tone-purple: light-dark(#cae, #759);
-    --tone-red: light-dark(#eaa, #957);
-    --tone-teal: light-dark(#ace, #597);
-    --tone-yellow: light-dark(#eea, #997);
+    --tone-black: light-dark(#999, #555);
+    --tone-blue: light-dark(#9bd, #579);
+    --tone-brown: light-dark(#b98, #752);
+    --tone-green: light-dark(#9b9, #597);
+    --tone-orange: light-dark(#db9, #975);
+    --tone-pink: light-dark(#d9b, #975);
+    --tone-purple: light-dark(#b9d, #759);
+    --tone-red: light-dark(#d99, #957);
+    --tone-teal: light-dark(#9bd, #597);
+    --tone-yellow: light-dark(#dd9, #997);
 }
 
 .post-black pre {
