--- a/themes/wattleworks/assets/css/basic.css
+++ b/themes/wattleworks/assets/css/basic.css
@@ -11,7 +11,6 @@
     --tone-line: light-dark(#cba, #655);
     --tone-flip: light-dark(var(--tone-fore), var(--tone-line));
 
-    --border-radius: 0.5rem;
     --border-width: 0.1rem;
 }
 
@@ -87,13 +86,11 @@ header {
             flex: 1;
 
             &:first-child {
-                border-top-left-radius: var(--border-radius);
-                border-bottom-left-radius: var(--border-radius);
+                border-left-width: calc(4 * var(--border-width));
             }
 
             &:last-child {
-                border-top-right-radius: var(--border-radius);
-                border-bottom-right-radius: var(--border-radius);
+                border-right-width: calc(4 * var(--border-width));
             }
         }
     }
@@ -116,7 +113,8 @@ main {
     pre {
         background-color: var(--tone-back);
         border: var(--border-width) solid var(--tone-line);
-        border-radius: var(--border-radius);
+        border-left-width: calc(4 * var(--border-width));
+        border-right-width: calc(4 * var(--border-width));
         line-height: 1.8rem;
         padding: 1rem;
     }
