--- a/themes/wattleworks/assets/css/tones.css
+++ b/themes/wattleworks/assets/css/tones.css
@@ -3,6 +3,7 @@
     --tone-blue: light-dark(#9bd, #579);
     --tone-brown: light-dark(#b98, #752);
     --tone-green: light-dark(#9b9, #597);
+    --tone-grey: light-dark(#bbb, #777);
     --tone-orange: light-dark(#db9, #975);
     --tone-pink: light-dark(#d9b, #975);
     --tone-purple: light-dark(#b9d, #759);
@@ -25,6 +26,10 @@
 
 .post-green pre {
     border-color: var(--tone-green);
+}
+
+.post-grey pre {
+    border-color: var(--tone-grey);
 }
 
 .post-orange pre {
